[package]
name = "rink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
rink-core = { version = "0.7.0", features = ["gpl"] }
serde = { version = "1.0.188", features = ["derive"] }
error-stack = "0.4.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
ron = "0.8.1"
